# EmbeddedSystemsGPS

./: CMakeLists.txt  DokuGPSLabor.docx  main.cpp
Decoder/: Decoder.cpp  Decoder.h
Satellite/: Satellite.cpp  Satellite.h
SumSignal/: SumSignal.cpp  SumSignal.h
